webroot/css/custom.css
@CHARSET "ISO-8859-1";

body{
	margin-top:	 60px; /* margin for fixed-on-top navbar */
}


/**
 * CSS for the nested list group
 */
.list-group.list-group-root {
    padding: 0;
    overflow: hidden;
}

.list-group.list-group-root .list-group {
    margin-bottom: 0;
}

.list-group.list-group-root .list-group-item {
    border-radius: 0;
    border-width: 1px 0 0 0;
}

.list-group.list-group-root > .list-group-item:first-child {
    border-top-width: 0;
}

.list-group.list-group-root > .list-group > .list-group-item {
    padding-left: 30px;
}

.list-group.list-group-root > .list-group > .list-group > .list-group-item {
    padding-left: 45px;
}

.list-group-item .fa {
    margin-right: 5px;
}

.studeo-exams-list {
	margin-bottom: 0px;
}

.studeo-exam-item {
	border-radius:0px 0px 4px 4px !important;
}
.studeo-solution-item:last-child {
	border-radius:0px 0px 4px 4px !important;
}

/**
 * CSS for course view page
 */
.studeo-course-detail h3 {
	margin-top: 0px;
}

img.studeo-course-logo { 
	width: 128px;
	height: 128px;
}

/**
 * Other css elements
 */
.link-button, .studeo-action-button {
	margin-left: 5px;
}



/* Header */
.large-header {
	position: relative;
	width: 100%;
	background: #333;
	overflow: hidden;
	background-size: cover;
	background-position: center center;
	z-index: 1;
}

.main-title {
	position: absolute;
	margin: 0;
	padding: 0;
	color: #f9f1e9;
	text-align: center;
	top: 50%;
	left: 50%;
	-webkit-transform: translate3d(-50%,-50%,0);
	transform: translate3d(-50%,-50%,0);
}

.demo-1 .main-title {
	text-transform: uppercase;
	font-size: 4.2em;
	letter-spacing: 0.1em;
}

.main-title .thin {
	font-weight: 200;
}
.main-title small {
	font-weight: 200;
	color:white;
}

@media only screen and (max-width : 768px) {
	.demo-1 .main-title {
		font-size: 3em;
	}
}

/**
Studeo colors and buttons
*/

.btn-studeo-red {
	background-color: #b73365; 
	border-color: #982b54;
	color: white;
}

.btn-studeo-red:hover {
	background-color: #982b54; 
	border-color: #982b54;
	color: white;
}

.btn-studeo-light-blue {
	background-color: #33b2b7; 
	border-color: #2a9498;
	color: white;
}

.btn-studeo-light-blue:hover {
	background-color: #2a9498; 
	border-color: #2a9498;
	color: white;
}

/** Popovers */
.popover {
    max-width: none;
}

/*NAVBAR LOGO*/
.navbar-brand {
    padding: 5px 15px;
}

